--- a/hometest.html
+++ b/hometest.html
@@ -516,60 +516,54 @@ function showSlides(n) {
 <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
     <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/rooftopdinner.jpg?raw=true" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">Rooftop dinner</p>
+      <p class="card-text"><small class="text-muted">Episode 1</small></p>
     </div>
   </div>
   <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-    <img src="https://itsladybug.cf/assets/images/s3e19-700x394.jpg" class="card-img-top" alt="...">
+    <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/thechase.jpg?raw=true" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">The Chase</p>
+      <p class="card-text"><small class="text-muted">Episode 2</small></p>
     </div>
   </div>
   <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-    <img src="https://itsladybug.cf/assets/images/s3e20-700x394.jpg" class="card-img-top" alt="..." title>
+    <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/catnipfragance.jpg?raw=true" class="card-img-top" alt="..." title>
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">Catnip Fragance</p>
+      <p class="card-text"><small class="text-muted">Episode 3</small></p>
     </div>
   </div>
 </div>
   <div class="card-deck">
   <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-    <img src="https://itsladybug.cf/assets/images/s3e21-700x394.jpg" class="card-img-top" alt="...">
+    <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/Curiosity%20Kicked%20the%20Cat.jpg?raw=true" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">Curiosity Kicked the Cat</p>
+      <p class="card-text"><small class="text-muted">Episode 4</small></p>
     </div>
   </div>
   <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-    <img src="https://itsladybug.cf/assets/images/s3e22-700x394.jpg" class="card-img-top" alt="...">
+    <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/Cutest%20Cat%20Fight.jpg?raw=true" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">Cutest Cat Fight</p>
+      <p class="card-text"><small class="text-muted">Episode 5</small></p>
     </div>
   </div>
   <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-    <img src="https://itsladybug.cf/assets/images/s3e23-700x394.jpg" class="card-img-top" alt="..." title>
+    <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/fatal%20posy.jpg?raw=true" class="card-img-top" alt="..." title>
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text">Fatal Posy</p>
+      <p class="card-text"><small class="text-muted">Episode 6</small></p>
     </div>
   </div>
 </div>
 </div>
 	</div>
 	<hr style="width:85%;height:3px" color="grey"><br>
- <h1>&nbsp;Latest episodes!<br><br></h1>
 <div class="container">
     <div class="row">
+	<h1>&nbsp;Latest episodes!<br><br></h1>
       </div>
   </div>
     <!-- Custom styles for this template -->
