--- a/hometest.html
+++ b/hometest.html
@@ -176,6 +176,7 @@ for (i = 0; i < coll.length; i++) {
 </div>
 </body>
    <hr style="width:85%;height:3px" color="grey"><br>
+<h1>&nbsp;Video Clips!<br><br></h1>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
@@ -270,7 +271,6 @@ img {
 }
 </style>
 <body>
-        <h1>&nbsp;Video Clips!<br><br></h1>
 	<h2 style="text-align:center">Video Clips!</h2></br>
 
 <div class="container">
@@ -563,7 +563,7 @@ function showSlides(n) {
 	<hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
     <div class="row">
-	<h1>&nbsp;Latest episodes!<br><br></h1>
+	<h1>&nbsp;Latest episodes!<br></h1>
       </div>
   </div>
     <!-- Custom styles for this template -->
