--- a/hometest.html
+++ b/hometest.html
@@ -176,7 +176,9 @@ for (i = 0; i < coll.length; i++) {
 </div>
 </body>
    <hr style="width:85%;height:3px" color="grey"><br>
+<div class="container">
 <h1>&nbsp;Video Clips!<br><br></h1>
+</div>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
