--- a/hometest.html
+++ b/hometest.html
@@ -273,7 +273,6 @@ img {
 }
 </style>
 <body>
-	<h2 style="text-align:center">Video Clips!</h2></br>
 
 <div class="container">
   <div class="mySlides">
@@ -557,6 +556,15 @@ function showSlides(n) {
     <div class="card-body">
       <p class="card-text">Fatal Posy</p>
       <p class="card-text"><small class="text-muted">Episode 6</small></p>
+    </div>
+  </div>
+</div>
+<div class="card-deck">
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/Curiosity%20Kicked%20the%20Cat.jpg?raw=true" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Curiosity Kicked the Cat</p>
+      <p class="card-text"><small class="text-muted">Episode 4</small></p>
     </div>
   </div>
 </div>
