--- a/hometest.html
+++ b/hometest.html
@@ -559,7 +559,7 @@ function showSlides(n) {
     </div>
   </div>
 </div>
-<div class="card mb-4 shadow-sm mb-4 bg-white rounded" style="width: 18rem;">
+<div class="card mb-4 shadow-sm mb-4 bg-white rounded">
   <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/fatal%20posy.jpg?raw=true" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
