--- a/hometest.html
+++ b/hometest.html
@@ -559,10 +559,11 @@ function showSlides(n) {
     </div>
   </div>
 </div>
-<div class="card mb-4 shadow-sm mb-4 bg-white rounded" style="width: 23rem;">
+<div class="card mb-4 shadow-sm mb-4 bg-white rounded" style="width: 22rem;">
   <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/scarybug.jpg?raw=true" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Scarybug</p>
+ <p class="card-text"><small class="text-muted">Episode 7</small></p>
   </div>
 </div>
 </div>
