--- a/hometest.html
+++ b/hometest.html
@@ -559,11 +559,30 @@ function showSlides(n) {
     </div>
   </div>
 </div>
-<div class="card mb-4 shadow-sm mb-4 bg-white rounded" style="width: 21.5rem;">
-  <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/scarybug.jpg?raw=true" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Scarybug</p>
- <p class="card-text"><small class="text-muted">Episode 7</small></p>
+<div class="card-deck">
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
   </div>
 </div>
 </div>
