--- a/hometest.html
+++ b/hometest.html
@@ -559,16 +559,17 @@ function showSlides(n) {
     </div>
   </div>
 </div>
-<div class="card-deck">
-  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-</div>
+<div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S3E25 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
 </div>
 	</div>
 	<hr style="width:85%;height:3px" color="grey"><br>
