--- a/hometest.html
+++ b/hometest.html
@@ -558,19 +558,15 @@ function showSlides(n) {
       <p class="card-text"><small class="text-muted">Episode 6</small></p>
     </div>
   </div>
+<div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/scarybug.jpg?raw=true" class="card-img-top" alt="..." title>
+    <div class="card-body">
+      <p class="card-text">Scarybug</p>
+      <p class="card-text"><small class="text-muted">Episode 7</small></p>
+    </div>
+  </div>
 </div>
 </div>
-	</div>
-<div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
-            <div class="card-body">
-              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S3E25 | 22 mins</small>
-              </div>
-            </div>
-		    </div>
 	</div>
 	<hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
