--- a/hometest.html
+++ b/hometest.html
@@ -305,11 +305,13 @@ img {
 	  <figcaption class="figure-caption"><a href="hearthunter.eng.html"></br>Covid-19 Special Clip!</a></figcaption>
   </div>
   <div class="column">
-    <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
+    <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/hawkmoth%20theme%20song.jpg?raw=true" alt="Forest" style="width:100%">
+	  <figcaption class="figure-caption"><a href="hearthunter.eng.html"></br>Hawkmoth theme song</a></figcaption>
   </div>
   <div class="column">
-  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
-  </div>
+  <img src="https://i.ytimg.com/vi/YU6MS8tPdUA/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBUl0G9Z7mNgWoVDpiqB30uj8nl0A" alt="Snow" style="width:100%">
+  <figcaption class="figure-caption"><a href="hearthunter.eng.html"></br>Villain top tips</a></figcaption>
+	</div>
 </div>
 
 </body>
