--- a/hometest.html
+++ b/hometest.html
@@ -368,13 +368,16 @@ img {
 
 </br></br><div class="row">
   <div class="column">
-  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
+  <img src="https://i.ytimg.com/vi/NSqZ2sLE5jE/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBlfYUcV7-s3GBybDDz5bpjMPvppQ" alt="Snow" style="width:100%">
+	  <figcaption class="figure-caption"><a href="hearthunter.eng.html"></br>Top 5 Battles!</a></figcaption>
   </div>
   <div class="column">
-    <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
+    <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/meetthekwamis.jpg?raw=true" alt="Forest" style="width:100%">
+	  <figcaption class="figure-caption"><a href="hearthunter.eng.html"></br>Meet the kwamis!</a></figcaption>
   </div>
   <div class="column">
-  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
+  <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/areyouarealfan.jpg?raw=true" alt="Snow" style="width:100%">
+	  <figcaption class="figure-caption"><a href="hearthunter.eng.html"></br>Are you a real fan?</a></figcaption>
   </div>
 </div>
 
@@ -432,13 +435,8 @@ img {
 
 </br></br><div class="row">
   <div class="column">
-  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
-  </div>
-  <div class="column">
-  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
+  <img src="https://i.ytimg.com/vi/kGcbj-rLrMU/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAyA9QplhJ9cT-WdyRQ6NTw-5Xu_A" alt="Snow" style="width:100%">
+	  <figcaption class="figure-caption"><a href="hearthunter.eng.html"></br>Fashion Hero</a></figcaption>
   </div>
 </div>
 
