--- a/hometest.html
+++ b/hometest.html
@@ -303,6 +303,45 @@ img {
   <div class="column">
   <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/special%20covid%2019.jpg?raw=true" alt="Snow" style="width:100%">
 	  <figcaption class="figure-caption"><a href="hearthunter.eng.html"></br>Covid-19 Special Clip!</a></figcaption>
+	<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+  <!-- Trigger the modal with a button -->
+  <h4 type="text" data-toggle="modal" data-target="#myModal">Open Modal</h4>
+
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Covid-19 Special clip!</h4>
+        </div>
+        <div class="modal-body">
+          <div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IaLYVHz7k00" allowfullscreen></iframe>
+</div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+  
+</div>
+
+</body>
   </div>
   <div class="column">
     <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/hawkmoth%20theme%20song.jpg?raw=true" alt="Forest" style="width:100%">
