--- a/watch.html
+++ b/watch.html
@@ -68,7 +68,7 @@
    <hr>
   <p class="epnumber">Loading :)</p>
 <script>
-  localStorage["lang"]="en,fr,it,chibi"
+  localStorage["lang"]="en,fr,it"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
