--- a/watchit.html
+++ b/watchit.html
@@ -56,10 +56,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="index.html">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
+                        Casa</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="true">Full episodes
+                    <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="false">Episodi completi
                     </a>
                 </li></ul>
             
