--- a/watchit.html
+++ b/watchit.html
@@ -71,7 +71,7 @@
    <hr>
   <p class="epnumber">Loading :)</p>
 <script>
-  localStorage["lang"]="it"
+  localStorage["lang"]="en,fr,it"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
