--- a/videos/Rooftopdinner.html
+++ b/videos/Rooftopdinner.html
@@ -1,4 +1,4 @@
-<h2 style="text-align:center">Rooftop dinner</h2></br>
+</br></br><h5 style="text-align:center">Rooftop dinner</h5></br>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
  <script>
@@ -20,15 +20,30 @@ const player = new Plyr('video', { captions: { active: true } });
 window.player = player;
           //# sourceURL=pen.js
         </script>
-<section class="mbr-section content8">
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.btn {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+}
 
-    
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlack;
+}
+</style>
+</head>
+<body>
 
-    <div class=".container-fluid">
-        <div class="media-container-fluid title">
-            <div class="p-3 my-3 bg-dark text-white">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc432326012_548837472">Download</a></div>
-</div></div></div></section>
+
+<button class="btn" style="width:100%" href="https://vk.com/doc432326012_548837472"><i class="fa fa-download"></i> Download</button>
+
+</body>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
   <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
