--- a/videos/Rooftopdinner.html
+++ b/videos/Rooftopdinner.html
@@ -22,6 +22,8 @@ window.player = player;
         </script>
 </br></br><head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 .btn {
   background-color: black;
