--- a/videos/Rooftopdinner.html
+++ b/videos/Rooftopdinner.html
@@ -43,7 +43,7 @@ window.player = player;
 <body>
 
 
-<button class="btn" style="width:100%"><i class="fa fa-download" href="https://vk.com/doc432326012_548837472"></i> Download</button>
+<button class="btn" style="width:100%"><i class="fa fa-download"><a class="btn btn-primary display-4 downloadbtn" href="https://vk.com/doc432326012_548837472" rel="nofollow"></i> Download</a></button>
 
 </body>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
