--- a/videos/Rooftopdinner.html
+++ b/videos/Rooftopdinner.html
@@ -1,5 +1,4 @@
 </br></br><h1 style="text-align:center">Rooftop dinner</h1></br>
-<iframe src="https://esporteone.com/player/multicanais.php?canal=GLOOB" width="100%" height="360" frameborder="0" scrolling="no" id="myFrame" allowfullscreen="true"></iframe>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
  <script>
@@ -9,7 +8,6 @@
   </script>
   <video poster="https://vignette.wikia.nocookie.net/lady-bug/images/e/e7/SW_%28331%29.png/revision/latest?cb=20181027232243" id="player" playsinline="" controls=""> <source src="https://vk.com/doc432326012_548837472" type="video/mp4"> </video>
    <!-- CUSTOM -->
-        
 <script src="player_data/polyfill.min.js"></script>
 <script src="player_data/plyr.min.js"></script>
 <script id="rendered-js">
@@ -21,31 +19,15 @@ const player = new Plyr('video', { captions: { active: true } });
 window.player = player;
           //# sourceURL=pen.js
         </script>
-</br></br><head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Add icon library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-.btn {
-  background-color: black;
-  border: none;
-  color: white;
-  padding: 12px 30px;
-  cursor: pointer;
-  font-size: 20px;
-}
+</br></br><section class="mbr-section content8">
 
-/* Darker background on mouse-over */
-.btn:hover {
-  background-color: RoyalBlack;
-}
-</style>
-</head>
-<body>
+    
 
-
-<button class="btn" style="width:100%"><i class="fa fa-download"><a href="https://vk.com/doc432326012_548837472"></i> Download</a></button>
-
+    <div class=".container-fluid">
+        <div class="media-container-fluid title">
+            <div class="p-3 my-3 bg-dark text-white">
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc-192909419_543334152">Download</a></div>
+</div></div></div></section>
 </body>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
