--- a/videos/Rooftopdinner.html
+++ b/videos/Rooftopdinner.html
@@ -28,7 +28,14 @@ window.player = player;
             <div class="p-3 my-3 bg-dark text-white">
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc-192909419_543334152">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Download</a></div>
 </div></div></div></section>
-<button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button>
+</div><div class="column-content c pr cf" style="width:31.393%;">
+	<div class="c-c"><div class="b b-s b-s-t150 b-s-b150 b-btn b-btn-1">
+	<div class="b-btn-c">
+		<a class="b-btn-l" href="https://vk.com/doc432326012_548837472" rel="nofollow" target="_blank">
+			<span class="b-btn-t">Download episode</span>
+		</a>
+	</div>
+</div></div>
 </body>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
