--- a/videos/Rooftopdinner.html
+++ b/videos/Rooftopdinner.html
@@ -6,7 +6,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://vignette.wikia.nocookie.net/lady-bug/images/e/e7/SW_%28331%29.png/revision/latest?cb=20181027232243" id="player" playsinline="" controls=""> <source src="https://vk.com/doc432326012_548837472" type="video/mp4"> </video>
+  <video poster="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/rooftopdinner.jpg?raw=true" id="player" playsinline="" controls=""> <source src="https://vk.com/doc593404724_555204370?hash=f89efb768dfe90d331&dl=7df0f99a59b1fec233" type="video/mp4"> </video>
    <!-- CUSTOM -->
 <script src="player_data/polyfill.min.js"></script>
 <script src="player_data/plyr.min.js"></script>
@@ -26,7 +26,7 @@ window.player = player;
     <div class=".container-fluid">
         <div class="media-container-fluid title">
             <div class="p-3 my-3 bg-dark text-white">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc-192909419_543334152">Download</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc593404724_555204370?hash=f89efb768dfe90d331&dl=7df0f99a59b1fec233">Download</a></div>
 		</div></div></div></section></br></br>
 </body>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
