--- a/watchit.html
+++ b/watchit.html
@@ -55,7 +55,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html">
+                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/it/index.html">
                         Casa</a>
                 </li>
                 <li class="nav-item">
