--- a/hometest2.html
+++ b/hometest2.html
@@ -67,13 +67,15 @@
                     <a class="nav-link link text-white display-4" href="index.html">&nbsp; &nbsp; &nbsp; Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fr/fullepisodes.html" aria-expanded="false"><a class="menu-item">hh</a></li></ul>
-            <select name="forma" onchange="location = this.value;">
+                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fr/fullepisodes.html" aria-expanded="false">Épisodes complets
+                    </a>
+                </li></ul>
+           <select name="forma" onchange="location = this.value;">
  <option>French</option>
  <option value="/episodes.fr"> English</option>
       <option value="/episodes.fr"> Italian</option>
       <option value="/episodes.fr"> Arabic</option>
-</select>
+</select> 
         </div>
     </nav>
 </section>
