--- a/hometest2.html
+++ b/hometest2.html
@@ -62,9 +62,9 @@
                 
             </div>
         </div>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="mbr-navbar__hamburger mbr-hamburger" >
             <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html">&nbsp; &nbsp; &nbsp; Home</a>
+                    <a class="mbr-buttons__link btn text-black" href="index.html">&nbsp; &nbsp; &nbsp; Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fr/fullepisodes.html" aria-expanded="false">Épisodes complets
