--- a/home.html
+++ b/home.html
@@ -70,14 +70,18 @@
                     <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fr/fullepisodes.html" aria-expanded="false">Épisodes complets
                     </a>
                 </li></ul>
-        </div>
-    </nav>
-	  <select name="forma" onchange="location = this.value;">
+		<li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fr/fullepisodes.html" aria-expanded="false">
+			<select name="forma" onchange="location = this.value;">
  <option>French</option>
  <option value="/episodes.fr"> English</option>
       <option value="/episodes.fr"> Italian</option>
       <option value="/episodes.fr"> Arabic</option>
-</select> 
+</select>    
+                    </a>
+                </li></ul>
+        </div>
+    </nav>
 </section>
 
 <section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-s3zUuILfn9 mbr-fullscreen mbr-parallax-background" id="header2-9l">
