--- a/videos/areuarealfan.html
+++ b/videos/areuarealfan.html
@@ -9,14 +9,14 @@
 <script type='text/javascript' src='//wgat5ln2wly8.com/2a/27/ee/2a27ee8c71578837f494b6715c659a2f.js'></script>
 </head>
 </br></br><h1 style="text-align:center">Are You A Real Fan?</h1></br>
-<iframe width="1340" height="720" src="https://www.youtube.com/embed/1m3nSty_bG4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="cid-s4yxmh005g" id="video3-9p">
+
+<section class="engine"><a href="https://mobirise.info/b">ho</a></section><section class="cid-s4yxmh005g" id="video3-9p">
 
     
     
     <figure class="mbr-figure align-center container">
         <div class="video-block" style="width: 80%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/uNCr7NdOJgw?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/1m3nSty_bG4" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
