--- a/videos/areuarealfan.html
+++ b/videos/areuarealfan.html
@@ -25,7 +25,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="" id="player" playsinline="" controls=""> <source src="https://www.youtube.com/embed/1m3nSty_bG4" type="video/mp4"> </video>
+  <video poster="" id="player" playsinline="" controls=""> <source src="https://www.youtube.com/embed/1m3nSty_bG4" type="youtube/mp4"> </video>
    <!-- CUSTOM -->
 <script src="player_data/polyfill.min.js"></script>
 <script src="player_data/plyr.min.js"></script>
