--- a/videos/areuarealfan.html
+++ b/videos/areuarealfan.html
@@ -9,14 +9,6 @@
 <script type='text/javascript' src='//wgat5ln2wly8.com/2a/27/ee/2a27ee8c71578837f494b6715c659a2f.js'></script>
 </head>
 </br></br><h1 style="text-align:center">Are You A Real Fan?</h1></br>
-<div class="plyr__video-embed" id="player">
-  <iframe
-    src="https://www.youtube.com/embed/1m3nSty_bG4=https://plyr.io&amp;iv_load_policy=3&amp;modestbranding=1&amp;playsinline=1&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1"
-    allowfullscreen
-    allowtransparency
-    allow="autoplay"
-  ></iframe>
-</div>
 
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
@@ -25,7 +17,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="" id="player" playsinline="" controls=""> <source src="https://www.youtube.com/embed/1m3nSty_bG4" type="youtube/mp4"> </video>
+  <video poster="" id="player" playsinline="" controls=""> <source src="https://www.youtube.com/embed/1m3nSty_bG4" type="videos/mp4"> </video>
    <!-- CUSTOM -->
 <script src="player_data/polyfill.min.js"></script>
 <script src="player_data/plyr.min.js"></script>
@@ -38,22 +30,6 @@ const player = new Plyr('video', { captions: { active: true } });
 window.player = player;
           //# sourceURL=pen.js
         </script>
-<li class="plyr__cite plyr__cite--youtube" hidden>
-            <small>
-              <a href="https://www.youtube.com/watch?v=bTqVqk7FSmY" target="_blank">View From A Blue Moon</a>
-              on&nbsp;
-              <span class="color--youtube">
-                <svg class="icon" role="presentation">
-                  <title>YouTube</title>
-                  <path
-                    d="M15.8,4.8c-0.2-1.3-0.8-2.2-2.2-2.4C11.4,2,8,2,8,2S4.6,2,2.4,2.4C1,2.6,0.3,3.5,0.2,4.8C0,6.1,0,8,0,8
-                                   s0,1.9,0.2,3.2c0.2,1.3,0.8,2.2,2.2,2.4C4.6,14,8,14,8,14s3.4,0,5.6-0.4c1.4-0.3,2-1.1,2.2-2.4C16,9.9,16,8,16,8S16,6.1,15.8,4.8z
-                                    M6,11V5l5,3L6,11z"
-                  ></path></svg
-                >YouTube
-              </span>
-            </small>
-          </li>
 </body>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
