--- a/videos/areuarealfan.html
+++ b/videos/areuarealfan.html
@@ -17,7 +17,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="" id="player" playsinline="" controls=""> <source src="https://www.youtube.com/embed/1m3nSty_bG4" type="videos/mp4"> </video>
+  <video poster="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/areyouarealfan.jpg?raw=true" id="player" playsinline="" controls=""> <source src="https://vk.com/doc593404724_557921636?hash=0f4077c02da2c63c79&dl=0064a6f1d311b3ae80" type="videos/mp4"> </video>
    <!-- CUSTOM -->
 <script src="player_data/polyfill.min.js"></script>
 <script src="player_data/plyr.min.js"></script>
@@ -30,6 +30,7 @@ const player = new Plyr('video', { captions: { active: true } });
 window.player = player;
           //# sourceURL=pen.js
         </script>
+</br></br><h3 style="text-align:center"><a href="https://vk.com/doc593404724_557921636?hash=0f4077c02da2c63c79&dl=0064a6f1d311b3ae80">Download</h3></a></br>
 </body>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
