--- a/videos/areuarealfan.html
+++ b/videos/areuarealfan.html
@@ -8,8 +8,7 @@
 <head>
 <script type='text/javascript' src='//wgat5ln2wly8.com/2a/27/ee/2a27ee8c71578837f494b6715c659a2f.js'></script>
 </head>
-</br></br><h1 style="text-align:center">Are You A Real Fan?</h1></br>
-
+</br></br><h1 style="text-align:center">Are You a Real Fan?</h1></br>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
  <script>
@@ -17,7 +16,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/areyouarealfan.jpg?raw=true" id="player" playsinline="" controls=""> <source src="https://vk.com/doc593404724_557921636?hash=0f4077c02da2c63c79&dl=0064a6f1d311b3ae80" type="videos/mp4"> </video>
+  <video poster="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/areyouarealfan.jpg?raw=true" id="player" playsinline="" controls=""> <source src="https://vk.com/doc593404724_557921636?hash=0f4077c02da2c63c79&dl=0064a6f1d311b3ae80" type="video/mp4"> </video>
    <!-- CUSTOM -->
 <script src="player_data/polyfill.min.js"></script>
 <script src="player_data/plyr.min.js"></script>
