--- a/watchfr.html
+++ b/watchfr.html
@@ -55,10 +55,10 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/it/">Home</a>
+                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fr/">Acceuil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/it/fullepisodes.html" aria-expanded="false">Épisodes complets
+                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fr/fullepisodes.html" aria-expanded="false">Épisodes complets
                     </a>
                 </li></ul>
             
