--- a/watch.html
+++ b/watch.html
@@ -57,7 +57,7 @@
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="true">Full episodes
+                    <a class="nav-link link text-white display-4" href="fullepisodes.html" aria-expanded="true">Full episodes
                     </a>
                 </li></ul>
         </div>
