--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -62,10 +62,10 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/">Acceuil</a>
+                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fullepisodes.html" aria-expanded="false">Épisode Complets
+                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fullepisodes.html" aria-expanded="false">Full Episodes
                     </a>
                 </li></ul>
             
