--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html  >
 <head>
@@ -67,7 +68,7 @@
                     <a class="nav-link link text-white display-4" href="https://itsladybug.cf/">&nbsp; &nbsp; &nbsp;Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fullepisodes.html" aria-expanded="false">Full Episodes
+                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fr/fullepisodes.html" aria-expanded="false">Full Episodes
                     </a>
                 </li></ul>
             
@@ -86,11 +87,11 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Miraculous Ladybug!</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Retrouvez toutes les actualités et épisodes ici!<br><br>Sélectionner votre langue:
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Catch All the news and episodes here!<br><br>Select your language:
                   <a class="menu-item">
 		<select name="forma" onchange="location = this.value;">
- <option>French</option>
- <option value="https://itsladybug.cf/"> English</option>
+ <option>English</option>
+ <option value="https://itsladybug.cf/fr"> French</option>
       <option value="https://itsladybug.cf/it"> Italian</option>
 </select>
                   </a></p>
