--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -717,7 +717,7 @@
     </div>
   </div></div></main>
   </div>
-  <div class="tab-pane fade" id="saison3" role="tabpanel" aria-labelledby="contact-tab">
+  <div class="tab-pane fade" id="season3" role="tabpanel" aria-labelledby="contact-tab">
   <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
