--- a/watchspecial.html
+++ b/watchspecial.html
@@ -71,7 +71,7 @@
    <hr>
   <p class="epnumber">Loading :)</p>
 <script>
-  localStorage["specials"]="en,es,fr,it"
+  localStorage["specials"]="en,fr,it"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
