--- a/watchspecial.html
+++ b/watchspecial.html
@@ -75,7 +75,7 @@
    <hr>
   <p class="epnumber">Loading :)</p>
 <script>
-  localStorage["lang"]="en,fr,it"
+  localStorage["lang"]="en,es,fr,it"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
