--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -87,6 +87,9 @@
   <li class="nav-item">
     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#season3" role="tab" aria-controls="contact" aria-selected="false">Season 3</a>
   </li>
+   <li class="nav-item">
+    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#specialepisodes" role="tab" aria-controls="contact" aria-selected="false">Special Episodes</a>
+  </li>
 </ul><div class="tab-content cid-rXAJ5IF6V2" id="custom-html-3h" data-rv-view="359">
   <div class="tab-pane fade show active" id="season1" role="tabpanel" aria-labelledby="home-tab">
   <style>
@@ -1030,6 +1033,54 @@
         </div>
   </div></div></div></main>
   </div>
+                <div class="tab-pane fade" id="specialepisodes" role="tabpanel" aria-labelledby="profile-tab">
+  <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 260px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+    <!-- Custom styles for this template -->
+    <link href="album.css" rel="stylesheet">
+    <main role="main">
+
+  <div class="album py-5 bg-light">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="https://itsladybug.cf/fr/newyorkspecial.html"><img src="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="https://itsladybug.cf/fr/newyorkspecial.html">New-York Special</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href=""><img src="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="">Shanghai Special</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+  </div></div></div></main>
 </div>
 
 
