--- a/newyorkspecial.html
+++ b/newyorkspecial.html
@@ -87,7 +87,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://vignette.wikia.nocookie.net/lady-bug/images/e/e7/SW_%28331%29.png/revision/latest?cb=20181027232243" id="player" playsinline="" controls=""> <source src="https://vk.com/doc432326012_552894117" type="video/mp4"> </video>
+  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://m.vk.com/doc616617216_569793175?hash=9f8d0762c2ae5aed71&dl=c5282a91aa1b91ca0d" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
@@ -108,7 +108,7 @@ window.player = player;
     <div class=".container-fluid">
         <div class="media-container-fluid title">
             <div class="p-3 my-3 bg-dark text-white">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc432326012_552894117">Télecharger</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://m.vk.com/doc616617216_569793175?hash=9f8d0762c2ae5aed71&dl=c5282a91aa1b91ca0d">Télecharger</a></div>
 </div></div></div></section>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
