--- a/newyorkspecial.html
+++ b/newyorkspecial.html
@@ -77,9 +77,9 @@
 </section>
 
 <section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAtDb3XLd" id="custom-html-1w" data-rv-view="281">
-  <h1><br><br><br><br><br>Climatika</h1>
+  <h1><br><br><br><br><br>The New York Special</h1>
    <hr>
-  <p>Saison 1 Episode 1</p>
+  <p></p>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
  <script>
