--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		<select name="forma" onchange="location = this.value;">
  <option>English</option>
  <option value="https://itsladybug.cf/fr"> French</option>
-      <option value="https://itsladybug.cf/it"> Italian</option>
+      <option value="https://itsladybug.cf/it"> italian</option>
 </select>
                   </a></p>
                 
