--- a/newyorkspecial.html
+++ b/newyorkspecial.html
@@ -87,7 +87,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://m.vk.com/doc616617216_569793175?hash=9f8d0762c2ae5aed71&dl=c5282a91aa1b91ca0d" type="video/mp4"> </video>
+  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc561717790_568993826" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
