--- a/newyorkspecial.html
+++ b/newyorkspecial.html
@@ -86,7 +86,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc561717790_568993826" type="video/mp4"> </video>
+  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://uc3f30633bf5b0833bcf1675c975.dl.dropboxusercontent.com/cd/0/get/BAZ1CHyOQbnAMMa3MARz8YTWuu5W4hnvISUhDoddtz7SvBdLj69U5fDL6oZuiRbT0e99NYauaCiRNbpbWy-Iix1Shfq51gNhhb4-X4jLhEEIfuXBcXn7NttnvBkjAKDt8k4/file?dl=1" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
