--- a/newyorkspecial.html
+++ b/newyorkspecial.html
@@ -86,7 +86,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://uc2f16e087d8504a53291f7d711c.dl.dropboxusercontent.com/cd/0/get/BAY60m0Qs7wuqmyqfvkgaNiEUuVT2B9NV7sxg9-ITB4bYMHiPhMbBX4H4H5rowTHcYKrC5NzZWBiQxWiUIu1FgXPk_W_QDKIgLHcU1OhuT86BKuSHuLqUtdgR7PGFYKTkc0/file?dl=1" type="video/mp4"> </video>
+  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc578716557_568728448" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
