--- a/newyorkspecial.html
+++ b/newyorkspecial.html
@@ -21,7 +21,16 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
  <script type='text/javascript' src='//wgat5ln2wly8.com/83/dc/7c/83dc7c2fcd4e471c83dbaaa8746523f9.js'></script>
-  
+ <script type="text/javascript">
+	atOptions = {
+		'key' : '3eacbae2a745a94f2f1e163102b2d4d7',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://wgat5ln2wly8.com/3eacbae2a745a94f2f1e163102b2d4d7/invoke.js"></scr' + 'ipt>');
+</script> 
   
 </head>
 <body>
@@ -107,7 +116,7 @@ window.player = player;
     <div class=".container-fluid">
         <div class="media-container-fluid title">
             <div class="p-3 my-3 bg-dark text-white">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc561717790_568993826">Télecharger</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">Download not available</a></div>
 </div></div></div></section>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
