--- a/index.html
+++ b/index.html
@@ -99,6 +99,22 @@
         </a>
     </div>
 </section>
+	<div class="album py-5 bg-light">
+	<div class="album py-5 bg-light">
+		 <div class="container">
+		<h1>&nbsp;Chibi episodes!<br><br></h1>
+<div class="card-deck">
+	<div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" class="card-img-top" alt="..." title>
+    <div class="card-body">
+      <p class="card-text"><a href="https://itsladybug.cf/newyorkspecial">Miraculous World, New York, United Heroes</a></p>
+      <p class="card-text"><small class="text-muted">1 Hour</small></p>
+    </div>
+  </div>
+</div>
+</div>
+	</div>
+	<hr style="width:85%;height:3px" color="grey"><br>
 <div class="album py-5 bg-light">
 	<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -145,9 +161,9 @@
 	<p></br>For the french-american friendship week, Marinette and her class travel to New York, THE city of superheroes! The ideal occasion for Marinette to be close to her friends and also Adrien. Indeed, he’s travelling with his father, Gabriel Agreste, who is VERY interested in a unique exposition of a precious necklace holding an eagle talon… a jewel that could hold powers coveted by Hawk Moth. Ladybug and Cat Noir will soon have to ally with the american heroes to defend them from their enemy!</p>
 <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/Ladybug_in_NYC_Concept_2-scaled.jpg?raw=true" class="img-fluid" alt="Responsive image"></br>
 </br></div>
-<button type="button" class="collapsible">New-York Release Date</button>
+<button type="button" class="collapsible">Miraculous Shanghai Release Date</button>
 <div class="content">
-	<p></br>The 52 mins Miraculous New-York Special is supposed to come out in between 1st September and 2nd October of this year on Disney Channel France</p>
+	<p></br>The 1 hour Miraculous Shanghai, Ladydragon Special is supposed to be out this year, we don't have any specific date for the time!</p>
 </div>
 <button type="button" class="collapsible">Miraculous Shanghai Synopsis!</button>
 <div class="content">
