--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	<div class="album py-5 bg-light">
 	<div class="album py-5 bg-light">
 		 <div class="container">
-		<h1>&nbsp;Chibi episodes!<br><br></h1>
+		<h1>&nbsp;Special episodes!<br><br></h1>
 <div class="card-deck">
 	<div class="card mb-4 shadow-sm mb-4 bg-white rounded">
     <img src="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" class="card-img-top" alt="..." title>
