--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
         </a>
     </div>
 </section>
+	<div class="alert alert-warning alert-dismissible fade show" role="alert">
+		<strong>Some Episodes may not work, the problem will be fixed soon!</strong>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 	<div class="album py-5 bg-light">
 	<div class="album py-5 bg-light">
 		 <div class="container">
