--- a/newyorkspecial.html
+++ b/newyorkspecial.html
@@ -95,7 +95,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://videos2.sendvid.com/8b/b2/t6bnqo4l.mp4?validfrom=1602536322&validto=1602543522&rate=180k&burst=500k&ip=178.135.3.238&hash=vGWZhUSjDRVt5mXexIpJ7vlt7wc%3D" type="video/mp4"> </video>
+  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://miraculousladybug.org/episode/EN/NYSpecialEN.mp4" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
