--- a/newyorkspecial.html
+++ b/newyorkspecial.html
@@ -95,7 +95,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://miraculousladybug.org/episode/EN/NYSpecialEN.mp4" type="video/mp4"> </video>
+  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="http://download1508.mediafire.com/0kuvvkfars3g/x6k704zijdl09qh/MIRACULOUS+CHIBI+-+FATAL+POSY.mp4" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
