--- a/newyorkspecial.html
+++ b/newyorkspecial.html
@@ -95,7 +95,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://miraculousladybug.org/episode/EN/NYSpecialEN.mp4" type="video/mp4"> </video>
+  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="http://download2274.mediafire.com/84eae5t37j9g/89yzjq69m22vuy2/Miraculous.World.New.York.United.Heroez.2020.720p.DSNY.WEB-DL.AAC2.0.x264-JEW.mkv" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
