--- a/newyorkspecial.html
+++ b/newyorkspecial.html
@@ -95,7 +95,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="http://download1522.mediafire.com/o8ievtyge5yg/hs6feogx6384ef8/Miraculous.World.New.York.United.Heroez.2020.720p.DSNY.WEB-DL.AAC2.0.x264-JEW.mkv" type="video/mp4"> </video>
+  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://archive.org/download/new-york-en/New%20York_EN.mkv" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
