--- a/404.html
+++ b/404.html
@@ -74,7 +74,7 @@ h3 {
 <div class="bgimg-1">
   <div class="caption">
     <span class="border">Look like this page doesn't exist</span><br>
-    <div class="b-c b-text-c b-s b-s-t60 b-s-b60 cf"><h2 class="wnd-align-center"><strong><font class="wsw-01">Go <a href="https://itsladybug.cf" rel="nofollow"><font class="wsw-47"><em>back home</em></font></a></font></strong></h2></div>
+    </br></br><div class="b-c b-text-c b-s b-s-t60 b-s-b60 cf"><h2 class="wnd-align-center"><strong><font class="wsw-01">Go <a href="https://itsladybug.cf" rel="nofollow"><font class="wsw-47"><em>back home</em></font></a></font></strong></h2></div>
 </div>
   </div>
 </div>
@@ -83,12 +83,6 @@ h3 {
 </head>
 <body>
 <br>
-<div class="footer">
-  <p>© 2020 ZAG, Method, Toei Animation, SAMG Animation, Disney, TF1, Globosat, SK Broadband. All Rights Reserved.
- <br>Any problems? Contact us : miraculous.fans.20@gmail.com<br>
-  </p>
-  <br>
-</div>
 
 </body>
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
