--- a/testing.html
+++ b/testing.html
@@ -177,19 +177,12 @@
 </br></div>
 <button type="button" class="collapsible">The Miraculous Movie Release Date!</button>
 <div class="content">
-	<p></br>The Miraculous Movie will air at the end of 2021.</p>
+	<p></br><div class="arrow">
+  <div class="arrow-top"></div>
+  <div class="arrow-bottom"></div>
+</div>The Miraculous Movie will air at the end of 2021.</p>
 <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/Ladybug_&_Cat_Noir_Awakening_official_logo.png?raw=true" class="img-fluid" alt="Responsive image"></br>
 </br></div>
-<li class="post-list-small__item">
-<article class="post-list-small__entry">
-<div class="post-list-small__body">
-<h3 class="post-list-small__entry-title">
-<a style=" cursor: pointer;" onclick="toggleElement('fuenf')">Mayura's Transformation</a>
-</h3>
-</div>
-<div class="text" id="fuenf" style="display:none;">The brazilian TV Channel «Mundo Gloob» released Mayura's transformation. Check it out!<br><b><a href="https://web.archive.org/web/20191211072903/https://www.youtube.com/watch?v=sDIa_Wt2OUI">Watch it now!</a></b></div>
-</article>
-</li>
 
 
 <script>
