--- a/testing.html
+++ b/testing.html
@@ -175,7 +175,7 @@
 	<p></br>To join Adrien in Shanghai, Marinette visits her Uncle Wang to celebrate his birthday. However, as soon as she arrives in China, she gets her bag with Tikki stolen, whom she needs to secretly transform into Ladybug! Without money and alone in the immense city, Marinette accepts the help of a young and resourceful girl, Fei. The two girls will ally and discover the existence of a new magical jewel, the Prodigious, who Hawkmoth, also in Shanghai, has wished to possess for a long time…</p>
 <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/Shanghai-Poster.jpg?raw=true" class="img-fluid" alt="Responsive image"></br>
 </br></div>
-<button type="button" class="collapsible"><a style=" cursor: pointer;" onclick="toggleElement('drei')">The Miraculous Movie Release Date!</button></a>
+<button type="button" class="collapsible">&#62; The Miraculous Movie Release Date!</button>
 <div class="content">
 	<p></br><div class="arrow">
   <div class="arrow-top"></div>
